--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.16",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.6.0",
