--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_NCYS=http://localhost:3001/api/v1
+VITE_API_NCYS=https://localapipnhacuayensao.com:3001/api/v1
 VITE_PRIVATE_KEY_SDK=ab9f9111f3d35b2f0381c0711ef4b418
 VITE_CANCEL_URL_PAY_OS=http://localhost:5173/
 VITE_RETURN_URL_PAY_OS=http://localhost:5173/deposit-success
